--- a/.github/workflows/epg.yml
+++ b/.github/workflows/epg.yml
@@ -20,10 +20,10 @@ jobs:
         env:
           PROXY_URL: ${{ secrets.PROXY_URL }}
         run: |
-          mkdir -p epg
+          
           cat files.json | jq -r 'to_entries[] | "\(.key) \(.value)"' | while read -r filename url; do
             echo "Downloading $filename from $url"
-            xml_file="epg/$filename"
+            xml_file="./$filename"
             xml_file_tmp="$xml_file.tmp"
             if [[ "$url" == "https://assets.livednow.com/epg.xml" ]]; then
               curl --retry 5 -x "$PROXY_URL" -o "$xml_file_tmp" "$url"
@@ -39,8 +39,8 @@ jobs:
           done
 
           cat files.json | jq -r 'keys[]' | while read -r filename; do
-            echo "FILENAME_$filename=epg/$filename" >> $GITHUB_ENV
-            echo "FILENAME_${filename%.xml}.gz=epg/${filename%.xml}.gz" >> $GITHUB_ENV
+            echo "FILENAME_$filename=./$filename" >> $GITHUB_ENV
+            
           done
 
       - name: Commit and push changes
@@ -58,9 +58,3 @@ jobs:
             echo "没有文件可提交"
           fi
 
-      - name: Repository Dispatch
-        uses: peter-evans/repository-dispatch@v3
-        with:
-          token: ${{ secrets.ACCESS_TOKEN }}
-          repository: taksssss/tv
-          event-type: sync
