--- a/.github/workflows/epg.yml
+++ b/.github/workflows/epg.yml
@@ -48,7 +48,7 @@ jobs:
           git config --local user.name "github-actions[bot]"
           git config --local user.email "github-actions[bot]@users.noreply.github.com"
 
-          git add epg/*
+          git add */*
 
           if ! git diff --cached --quiet; then
             now_time=$(TZ='Asia/Shanghai' date '+%Y-%m-%d %H:%M:%S')
